--- a/app/views/inspection_specifications/edit.html.erb
+++ b/app/views/inspection_specifications/edit.html.erb
@@ -1,5 +1,5 @@
 <%- model_class = InspectionSpecification -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => InspectionSpecification %></h1>
+  <h1> Prüfungsverordung bearbeiten</h1>
 </div>
 <%= render :partial => 'form' %>
