--- a/app/views/inspection_specifications/index.html.erb
+++ b/app/views/inspection_specifications/index.html.erb
@@ -5,28 +5,22 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>ID</th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:basis) %></th>
-      <th><%= model_class.human_attribute_name(:inspector) %></th>
+      <th><%= model_class.human_attribute_name(:specification) %></th>
+      <th><%= model_class.human_attribute_name(:basis_of_check) %></th>
       <th><%= model_class.human_attribute_name(:intervall_in_years) %></th>
-      <th><%= model_class.human_attribute_name(:is_first_check_necessary) %></th>
-      <th><%= model_class.human_attribute_name(:inspector_first_check) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%= model_class.human_attribute_name(:intervall_information) %></th>
+      <th><%= model_class.human_attribute_name(:kind_of_check) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @inspection_specifications.each do |inspection_specification| %>
       <tr>
-        <td><%= inspection_specification.id %></td>
-        <td><%= inspection_specification.name %></td>
-        <td><%= inspection_specification.basis %></td>
-        <td><%= inspection_specification.inspector %></td>
+        <td><%= inspection_specification.specification %></td>
+        <td><%= inspection_specification.basis_of_check %></td>
         <td><%= inspection_specification.intervall_in_years %></td>
-        <td><%= inspection_specification.is_first_check_necessary %></td>
-        <td><%= inspection_specification.inspector_first_check %></td>
-        <td><%=l inspection_specification.created_at, format: :long %></td>
+        <td><%= inspection_specification.intervall_information %></td>
+        <td><%= inspection_specification.kind_of_check %></td>
         <td>
           <%= link_to inspection_specification_path(inspection_specification), :class => 'btn btn-xs', :title => "#{ t('.show', :default => t('helpers.links.show')) }" do %>
             <%= glyph 'info-sign' %>
