--- a/app/views/property_has_facilities/new.html.erb
+++ b/app/views/property_has_facilities/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', property_has_facilities_path %>
+<%= link_to 'Back', property_property_has_facilities_path(@property) %>
